...
    
    @objc private func logOut() {
        firebaseAuth.signOut()
    }
    
    @objc private func createDeck() {
        let createDeckAC = UIAlertController(title: "Create A New Deck", message: "Enter the name of your new deck.", preferredStyle: .alert)
        let okAction = UIAlertAction(title: "OK", style: .default) { (alertAction) in
            let textField = createDeckAC.textFields![0] as UITextField
            guard let deckName = textField.text, !deckName.isEmpty else { print("No deckname entered"); return }
            //This saves the deck name to firebase database
            self.ref = Database.database().reference()
            let newDeck = Decks(ref: self.ref, name: deckName)
            if let currentUser = Auth.auth().currentUser {
                let newCat = self.ref.child("users/\(String(describing: currentUser.uid))/categories").childByAutoId()
                newCat.setValue(newDeck.toAnyObject())    
            }
        }
        createDeckAC.addTextField { (textfield) in
            textfield.placeholder = "Enter deck name"
        }
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        createDeckAC.addAction(okAction)
        createDeckAC.addAction(cancelAction)
        self.present(createDeckAC, animated: true, completion: nil)
        
...
