...
        iv.image = #imageLiteral(resourceName: "flashcardlogo")
        return iv
    }()
    
    lazy var logInButton: UIButton = {
        let butt = UIButton()
        butt.setTitle("Log In", for: .normal)
        butt.titleLabel?.textAlignment = .center
        butt.layer.borderColor = UIColor.white.cgColor
        butt.layer.borderWidth = 1.0
        butt.layer.cornerRadius = 2.0
        return butt
    }()
...
