...
        butt.layer.borderWidth = 0.5
        return butt
    }()
    
    lazy var createDeckButton: UIButton = {
        let butt = UIButton()
        let image = UIImage(named: "createNewDeck")?.withRenderingMode(.alwaysTemplate)
        butt.setImage(image, for: .normal)
        butt.tintColor = UIColor(red: 51/255, green: 156/255, blue: 255/255, alpha: 1.0)
        butt.layer.borderColor = UIColor.lightGray.cgColor
        butt.layer.borderWidth = 0.5

        return butt
...
